--- a/scss/partials/_latestnews.scss
+++ b/scss/partials/_latestnews.scss
@@ -1,5 +1,4 @@
 
-
 .latestnews {
     display:grid;
     grid-template-columns:repeat(auto-fit, 370px);
@@ -33,7 +32,7 @@
 }
 
 .details {
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 25%;
     align-items: center;
 }
